--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -3,127 +3,145 @@ all:
   children:
     grnoc:
       children:
-        bastion:
-          hosts:
-            jump.grnoc.iu.edu:
-            leap.grnoc.iu.edu:
-            skip.grnoc.iu.edu:
-        internal:
+        internal_all:
           children:
-            compute:
+            bastion:
+              hosts:
+                jump.grnoc.iu.edu:
+                leap.grnoc.iu.edu:
+                skip.grnoc.iu.edu:
+              internal:
+                children:
+                  internal_ndca:
+                    hosts:
+                      carto.bldc.grnoc.iu.edu:
+                      carto.noc.onenet.net:
+                      frontend.tsds.bldc.grnoc.iu.edu:
+                      frontend.tsds.ctc.grnoc.iu.edu:
+                      io3.bldc.grnoc.iu.edu:
+                      irnc-grm.grnoc.iu.edu:
+                      jdratlif-dev7.ctc.grnoc.iu.edu:
+                      mongo-arbiter.areon.net:
+                      netflow-dev-es-master-01.ctc.grnoc.iu.edu:
+                      netflow-dev-es-agg-01.bldc.grnoc.iu.edu:
+                      netflow-dev-es-agg-01.ctc.grnoc.iu.edu:
+                      netflow-dev-es-data-01.bldc.grnoc.iu.edu:
+                      netflow-dev-es-data-01.ctc.grnoc.iu.edu:
+                      netsage-archive.grnoc.iu.edu:
+                      netsage-probe1.grnoc.iu.edu:
+                      netsage-portal.grnoc.iu.edu:
+                      netsage-portal-sox.grnoc.iu.edu:
+                      netsage-simp.grnoc.iu.edu:
+                      rabbitmq.tsds.bldc.grnoc.iu.edu:
+                      services.tsds.bldc.grnoc.iu.edu:
+                      services.tsds.ctc.grnoc.iu.edu:
+                      simp-comp.bldc.grnoc.iu.edu:
+                      simp-data2.bldc.grnoc.iu.edu:
+                      simp-poller.bldc.grnoc.iu.edu:
+                      snapp.bldc.grnoc.iu.edu:
+                      snapp.frcy.areon.net:
+                      snapp.fyvl.areon.net:
+                      snapp.oshean.org:
+                      snapp.net.cen.ct.gov:
+                      snapp.noc.onenet.net:
+                      snapp-test-01.globalnoc.mcnc.org:
+                      snapp-collector-01.globalnoc.mcnc.org:
+                      snapp-collector-02.globalnoc.mcnc.org:
+                      snapp-collector-test-01.globalnoc.mcnc.org:
+                      snapp-frontend-01.globalnoc.mcnc.org:
+                      snapp-frontend-02.globalnoc.mcnc.org:
+                      snapp-frontend-test-01.globalnoc.mcnc.org:
+                      snapp-portal.noc.onenet.net:
+                      snapp-portal-01.globalnoc.mcnc.org:
+                      snapp-portal-02.globalnoc.mcnc.org:
+                      snapp-portal-test-01.globalnoc.mcnc.org:
+                      snapp-rabbit-01.globalnoc.mcnc.org:
+                      snapp-rabbit-02.globalnoc.mcnc.org:
+                      snapp-rabbit-test-01.globalnoc.mcnc.org:
+                      snapp-services-01.globalnoc.mcnc.org:
+                      snapp-services-02.globalnoc.mcnc.org:
+                      snapp-services-test-01.globalnoc.mcnc.org:
+                      snapp-shard-01.globalnoc.mcnc.org:
+                      snapp-shard-02.globalnoc.mcnc.org:
+                      snapp-shard-test-01.globalnoc.mcnc.org:
+                      ssh-collector.bldc.grnoc.iu.edu:
+                  internal_other:
+                    children:
+                      compute:
+                        children:
+                          compute_bldc:
+                            hosts:
+                              compute.cloud.bldc.grnoc.iu.edu:
+                              compute2.cloud.bldc.grnoc.iu.edu:
+                              compute3.cloud.bldc.grnoc.iu.edu:
+                              compute4.cloud.bldc.grnoc.iu.edu:
+                              compute5.cloud.bldc.grnoc.iu.edu:
+                            compute_ctc:
+                              hosts:
+                                compute.cloud.ctc.grnoc.iu.edu:
+                                compute2.cloud.ctc.grnoc.iu.edu:
+                                compute3.cloud.ctc.grnoc.iu.edu:
+                                compute4.cloud.ctc.grnoc.iu.edu:
+                                compute5.cloud.ctc.grnoc.iu.edu:
+                      awx:
+                        hosts:
+                          awx.grnoc.iu.edu:
+                          awx-test.bldc.grnoc.iu.edu:
+                    hosts:
+                      backup.grnoc.iu.edu:
+                      backup.ictc.ilight.net:
+                      build.grnoc.iu.edu:
+                      db-01.grnoc.iu.edu:
+                      db-02.grnoc.iu.edu:
+                      mon.bldc.net.cen.ct.gov:
+                      mon.ehct.net.cen.ct.gov:
+                      mon-01.grnoc.iu.edu:
+                      mon-02.grnoc.iu.edu:
+                      nocmon.bldc.grnoc.iu.edu:
+                      nocmon.ctc.grnoc.iu.edu:
+                      syslog.grnoc.iu.edu:
+                      webdoc-01.grnoc.iu.edu:
+        i2_all:
+          children:
+            i2_bastion:
+              hosts:
+                bastion.bldc.net.internet2.edu:
+                bastion.wash2.net.internet2.edu:
+            i2:
               children:
-                compute_bldc:
+                i2_ndca:
                   hosts:
-                    compute.cloud.bldc.grnoc.iu.edu:
-                    compute2.cloud.bldc.grnoc.iu.edu:
-                    compute3.cloud.bldc.grnoc.iu.edu:
-                    compute4.cloud.bldc.grnoc.iu.edu:
-                    compute5.cloud.bldc.grnoc.iu.edu:
-                compute_ctc:
+                    frontend.tsds.bldc.net.internet2.edu:
+                    frontend.tsds.wash2.net.internet2.edu:
+                    mongo1.tsds.bldc.net.internet2.edu:
+                    mongo2.tsds.bldc.net.internet2.edu:
+                    mongo3.tsds.bldc.net.internet2.edu:
+                    mongo1.tsds.wash2.net.internet2.edu:
+                    mongo2.tsds.wash2.net.internet2.edu:
+                    mongo3.tsds.wash2.net.internet2.edu:
+                    rabbitmq.tsds.bldc.net.internet2.edu:
+                    rabbitmq.tsds.wash2.net.internet2.edu:
+                    services.tsds.bldc.net.internet2.edu:
+                    services.tsds.wash2.net.internet2.edu:
+                    snapp-collector.bldc.net.internet2.edu:
+                    snapp-collector.wash2.net.internet2.edu:
+                    vn.bldc.net.internet2.edu:
+                    vn.wash2.net.internet2.edu:
+                i2_other:
                   hosts:
-                    compute.cloud.ctc.grnoc.iu.edu:
-                    compute2.cloud.ctc.grnoc.iu.edu:
-                    compute3.cloud.ctc.grnoc.iu.edu:
-                    compute4.cloud.ctc.grnoc.iu.edu:
-                    compute5.cloud.ctc.grnoc.iu.edu:
-          hosts:
-            awx.grnoc.iu.edu:
-            awx-test.bldc.grnoc.iu.edu:
-            backup.grnoc.iu.edu:
-            backup.ictc.ilight.net:
-            build.grnoc.iu.edu:
-            carto.bldc.grnoc.iu.edu:
-            carto.noc.onenet.net:
-            db-01.grnoc.iu.edu:
-            db-02.grnoc.iu.edu:
-            frontend.tsds.bldc.grnoc.iu.edu:
-            frontend.tsds.ctc.grnoc.iu.edu:
-            io3.bldc.grnoc.iu.edu:
-            irnc-grm.grnoc.iu.edu:
-            jdratlif-dev7.ctc.grnoc.iu.edu:
-            mon.bldc.net.cen.ct.gov:
-            mon.ehct.net.cen.ct.gov:
-            mon-01.grnoc.iu.edu:
-            mon-02.grnoc.iu.edu:
-            mongo-arbiter.areon.net:
-            netflow-dev-es-master-01.ctc.grnoc.iu.edu:
-            netflow-dev-es-agg-01.bldc.grnoc.iu.edu:
-            netflow-dev-es-agg-01.ctc.grnoc.iu.edu:
-            netflow-dev-es-data-01.bldc.grnoc.iu.edu:
-            netflow-dev-es-data-01.ctc.grnoc.iu.edu:
-            netsage-archive.grnoc.iu.edu:
-            netsage-probe1.grnoc.iu.edu:
-            netsage-portal.grnoc.iu.edu:
-            netsage-portal-sox.grnoc.iu.edu:
-            netsage-simp.grnoc.iu.edu:
-            nocmon.bldc.grnoc.iu.edu:
-            nocmon.ctc.grnoc.iu.edu:
-            rabbitmq.tsds.bldc.grnoc.iu.edu:
-            services.tsds.bldc.grnoc.iu.edu:
-            services.tsds.ctc.grnoc.iu.edu:
-            simp-comp.bldc.grnoc.iu.edu:
-            simp-data2.bldc.grnoc.iu.edu:
-            simp-poller.bldc.grnoc.iu.edu:
-            snapp.bldc.grnoc.iu.edu:
-            snapp.frcy.areon.net:
-            snapp.fyvl.areon.net:
-            snapp.oshean.org:
-            snapp.net.cen.ct.gov:
-            snapp.noc.onenet.net:
-            snapp-test-01.globalnoc.mcnc.org:
-            snapp-collector-01.globalnoc.mcnc.org:
-            snapp-collector-02.globalnoc.mcnc.org:
-            snapp-collector-test-01.globalnoc.mcnc.org:
-            snapp-frontend-01.globalnoc.mcnc.org:
-            snapp-frontend-02.globalnoc.mcnc.org:
-            snapp-frontend-test-01.globalnoc.mcnc.org:
-            snapp-portal.noc.onenet.net:
-            snapp-portal-01.globalnoc.mcnc.org:
-            snapp-portal-02.globalnoc.mcnc.org:
-            snapp-portal-test-01.globalnoc.mcnc.org:
-            snapp-rabbit-01.globalnoc.mcnc.org:
-            snapp-rabbit-02.globalnoc.mcnc.org:
-            snapp-rabbit-test-01.globalnoc.mcnc.org:
-            snapp-services-01.globalnoc.mcnc.org:
-            snapp-services-02.globalnoc.mcnc.org:
-            snapp-services-test-01.globalnoc.mcnc.org:
-            snapp-shard-01.globalnoc.mcnc.org:
-            snapp-shard-02.globalnoc.mcnc.org:
-            snapp-shard-test-01.globalnoc.mcnc.org:
-            ssh-collector.bldc.grnoc.iu.edu:
-            syslog.grnoc.iu.edu:
-            webdoc-01.grnoc.iu.edu:
-        i2:
-          hosts:
-            backup.ctc.net.internet2.edu:
-            frontend.tsds.bldc.net.internet2.edu:
-            frontend.tsds.wash2.net.internet2.edu:
-            mon.bldc.net.internet2.edu:
-            mon.wash2.net.internet2.edu:
-            mongo1.tsds.bldc.net.internet2.edu:
-            mongo2.tsds.bldc.net.internet2.edu:
-            mongo3.tsds.bldc.net.internet2.edu:
-            mongo1.tsds.wash2.net.internet2.edu:
-            mongo2.tsds.wash2.net.internet2.edu:
-            mongo3.tsds.wash2.net.internet2.edu:
-            rabbitmq.tsds.bldc.net.internet2.edu:
-            rabbitmq.tsds.wash2.net.internet2.edu:
-            services.tsds.bldc.net.internet2.edu:
-            services.tsds.wash2.net.internet2.edu:
-            snapp-collector.bldc.net.internet2.edu:
-            snapp-collector.wash2.net.internet2.edu:
-            vn.bldc.net.internet2.edu:
-            vn.wash2.net.internet2.edu:
-        nwave:
+                    backup.ctc.net.internet2.edu:
+                    mon.bldc.net.internet2.edu:
+                    mon.wash2.net.internet2.edu:
+        nwave_all:
           children:
             nwave_bastion:
               hosts:
                 bastion.bldc.nwave.noaa.gov:
                 bastion.ctc.nwave.noaa.gov:
                 bastion.boul.nwave.noaa.gov:
-            nwave_internal:
+            nwave:
               children:
-                ndca_nwave:
+                nwave_ndca:
                   hosts:
                     carto.bldc.nwave.noaa.gov:
                     carto.ctc.nwave.noaa.gov:
@@ -153,10 +171,13 @@ all:
                     tsds.bldc.nwave.noaa.gov:
                     tsds.ctc.nwave.noaa.gov:
                     tsds.boul.nwave.noaa.gov:
-                non_ndca_nwave:
+                nwave_other:
+                  children:
+                    awx:
+                      hosts:
+                        awx.bldc.nwave.noaa.gov:
+                        awx.ctc.nwave.noaa.gov:
                   hosts:
-                    awx.bldc.nwave.noaa.gov:
-                    awx.ctc.nwave.noaa.gov:
                     dist.bldc.nwave.noaa.gov:
                     mysql.bldc.nwave.noaa.gov:
                     mysql.ctc.nwave.noaa.gov:
@@ -167,6 +188,3 @@ all:
                     tools2.bldc.nwave.noaa.gov:
                     tools2.ctc.nwave.noaa.gov:
                     tools2.silv.nwave.noaa.gov:
-    xaiver:
-      hosts:
-        htpc:
